# BetterC

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  better_string.c  input_stream.h  safe_memory_operations.c  safe_memory_operations.h  safe_utility.c  string_builder.c  string_builder.h  vector.c
BetterC/: CMakeLists.txt  algorithm.c  algorithm.h  better_string.c  better_string.h  input_stream.c  input_stream.h  queue.c  queue.h  safe_memory_operations.c  safe_memory_operations.h  safe_utility.c  safe_utility.h  stack.c  stack.h  string_builder.c  string_builder.h  vector.c  vector.h
BetterC/tests/: CMakeLists.txt  algorithm_test.c  input_stream_test.c  queue_test.c  safe_memory_operations_test.c  stack_test.c  string_builder_test.c  string_test.c
BetterUnixC/: CMakeLists.txt  concurrent_queue.c  concurrent_queue.h  message_queue.c  message_queue.h  mutex_and_signal.c  mutex_and_signal.h  read_write_lock.c  read_write_lock.h  socket.c  socket.h  system_headers.h  thread.c  thread.h  thread_pool.c  thread_pool.h
examples/: CMakeLists.txt  concurrent_queue.c  tcp_echo_client.c  tcp_echo_run.sh  tcp_echo_server.c
